--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/Tez28/react-portfolio",
+  "homepage": ".",
   "name": "react-port",
   "version": "0.1.0",
   "private": true,
